同步于: 12月4日20时52分

--- a/pages/p5/954731.md
+++ b/pages/p5/954731.md
@@ -1,4 +1,4 @@
-### 任志强后又一亲信落马 下一个是王岐山？(图)
+### 2020年453家房企破产 平均每天1.5家被清算(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="王岐山亲信董宏被带走调查" src="https://img3.secretchina.com/pic/2020/1-16/p2605302a829517819-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="房企 破产 清算 房地产" src="https://img3.secretchina.com/pic/2020/10-10/p2792811a317710787-ss.jpg"/>
   <br>
-   王岐山 （图片来源：Feng Li/Getty Images）
+   2020年，已有453家房地产企业破产，平均每天1.5家房企被清算。（图片来源：China Photos/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,91 +21,64 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月3日讯】
+  【看中国2020年12月4日讯】（看中国记者丁晓雨综合报导）这两年，最痛苦的企业莫过于
   <strong>
-   中共
+   房地产
   </strong>
-  第十九届五中全会举行在即，中国国家副主席
+  开发商了。随着政策的收紧，融资环境的改变，居民收入降低、消费锐减，房产企业躺着赚大钱的日子一去不返，每天琢磨的都是如何找钱，如何活下去。据媒体报导，2020年，已有453家房地产企业
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/王岐山" target="_blank">
-    王岐山
+   破产
+  </strong>
+  ，平均每天1.5家
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/房企" target="_blank">
+    房企
    </span>
   </strong>
-  的部下、中央巡视组前副部级巡视专员
+  被
   <strong>
-   董宏
+   清算
   </strong>
-  被中纪委带走调查。从任志强到董宏，被外界视为王岐山的亲信的人一一出事，这背后藏着什么玄机？
+  。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  2020年的十一长假，
-  <span href="https://www.secretchina.com/news/gb/tag/中共" target="_blank">
-   中共
+  自2002年5月9日，中国国土资源部签发11号令《招标拍卖挂牌出让国有土地使用权规定》之后，商业、旅游、商品住宅等各类经营性用地被推向市场，
+  <span href="https://zh.wikipedia.org/wiki/房地产" target="_blank">
+   房地产
   </span>
-  党内显然有一派人士的心情是轻松不起来的。中央纪委国家监委网站十月二日在官网上以四十五个字交代，董宏因涉嫌“严重违纪违法”，目前正接受“纪律审查和监察调查”。
+  正式进入杠杆红利时代，房产大佬们只要融到钱，就可以从公开市场上拿地建楼。
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/董宏" target="_blank">
-   董宏
+  利用资金杠杆，融创、碧桂园、恒大、泰禾、富力等地产公司，都在这一时期成功实现规模扩张，销售额从百亿跃进到千亿。
+ </p>
+ <p>
+  随后的20年间，房价、地价被越炒越高，致使地产全行业负债率水平居高不下。
+ </p>
+ <p>
+  据《财经》杂志报导，2020年，房企债券到了还本付息高峰期，全年房企债券合计到期约8365亿元，比2019年增加1880亿元。
+ </p>
+ <p>
+  据《财经》记者不完全统计，截至2020年10月31日，全国已有453家房企发布
+  <span href="https://zh.wikipedia.org/wiki/破產" target="_blank">
+   破产
   </span>
-  违反了什么纪律问题？怎么个严重违纪违法？中纪委照往例没有明确交代。
- </p>
- <p>
-  董宏曾是中共元老薄一波的秘书，后来长期追随王岐山。资料显示，从王岐山到广东任职董宏就一路跟随，王岐山到哪都有董宏这个左右手。
- </p>
- <p>
-  王岐山担任中共中纪委书记时，董宏曾任中央第二巡视组副组长、中央第十二巡视组组长。
- </p>
- <p>
-  <strong>
-   党内清洗王岐山恐成刘少奇？
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  对于五中全会10月26日召开前夕党内出现如此大的动静，身处北京的独立评论人高瑜接受自由亚洲电台采访就非常谨慎地说，国内现在没有可以讲话的空间，共产党内更是如此。她认为，董宏落马显示，中共党内可能有不同的声音存在。但她不指名道姓地说，“有人”只愿意听一种声音，所以要动手。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “不能触动核心，主要是这样，一定要维护党的核心。如果核心感到什么地方不稳定，他就一定要动手的。只要是共产党，他就是搞清洗。你看
-  <span href="https://www.secretchina.com/news/gb/tag/毛泽东" target="_blank">
-   毛泽东
+  公告，平均每天约1.5家房企被
+  <span href="https://zh.wikipedia.org/wiki/清盤" target="_blank">
+   清算
   </span>
-  和刘少奇的关系，刘少奇还提出过毛泽东思想呢！我认为就是一个党内清洗。”高瑜说。
+  。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,7 +93,7 @@
   </div>
  </center>
  <p>
-  刘少奇当年因反对“三面红旗”，在文革初期被冠上“走资本主义道路的当权派”、“党内的赫鲁晓夫”名号遭批斗打倒。
+  2020年初，受疫情影响，工地停工、售楼处关门，房企日子越发艰难。开发商们一边降价、打折、促销、回款，一边等待政府的救市政策，希望重新回到“正轨”，能继续融资扩大规模，拿地建房。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -135,9 +108,11 @@
   </div>
  </center>
  <p>
-  <strong>
-   宫斗剧上演王岐山求自保牺牲老友与幕僚？
-  </strong>
+  虽然2020年以来，中国央行三次降准释放流动性1.75万亿元救市，但“三道红线”彻底击碎了
+  <span href="https://www.secretchina.com/news/gb/tag/房地产" target="_blank">
+   房地产
+  </span>
+  企业的梦想。无奈，房地产业只能加大发债力度。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -152,13 +127,11 @@
   </div>
  </center>
  <p>
-  在董宏之前，与王岐山熟识的红二代地产大亨任志强在撰文批评
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
-   </span>
-  </strong>
-  是“剥光了衣服也要坚持当皇帝的小丑”的文章后，北京市第二中级人民法院9月22日以贪污罪、受贿罪、挪用公款罪及国有公司人员滥用职权罪，判处任志强有期徒刑18年。
+  据贝壳研究院统计，今年三季度，房企发债规模刷新历史纪录，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  境内外债券发行307次，融资规模约3247亿元，同比增长14%。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,7 +146,7 @@
   </div>
  </center>
  <p>
-  当时就有分析认为，这是习近平警告党内红二代，不要有不同声音挑战他的地位。
+  万科董事长郁亮认为，“三道红线”彻底给地产金融红利时代画上了句号。两年间，杠杆率过高的华夏幸福已经分了半壁江山给平安集团，而至今无人明确接盘的泰禾，股价从最高点跌去了近八成。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +161,7 @@
   </div>
  </center>
  <p>
-  已经定居美国的李南央是中共元老李锐的女儿。已故的李锐曾任毛泽东秘书。李南央则告诉记者，她对党内什么派剑指谁，不感兴趣，也不想用“红二代“这种血统论来探讨党内问题。她认为，中共党内现在只有以习近平为首的“生产大队长派”，而任志强的例子显示，王岐山为了自保，谁都可以牺牲。
+  所谓 “三道红线”是指：1.剔除预收款后的资产负债率大于70%；2.净负债率大于100%；3.现金短债比小于一倍。依据触线条数，房企被分为“红橙黄绿”四档，若全未触线，则有息负债规模年增速不超过15%，每触碰一条，年增速上限降低5%，全部踩线，则有息负债规模不得再增加。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,7 +180,7 @@
   </ins>
  </center>
  <p>
-  “习近平拿不拿下王岐山，一点关系都没有，因为王岐山在那个地方，对改革不起任何作用；王岐山他不会保任何人的，任志强他都不保了，他会保什么人啊！他要保的就是他自己。王岐山为了保自己，他可以把所有人都抛下去。王岐山本来可以对习近平有所影响的，但他没有，就证明他一开始就选择自保。”李南央说。
+  这一从未形成正式文件的“窗口指导”政策让整个房地产业陷入寒冬。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -222,9 +195,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   李南央：习近平步毛泽东后尘
-  </strong>
+  一边是房企拿地成本一路走高，另一边是房地产企业因急需回笼资金降价甩卖，进一步压缩了利润空间。各大房产企业只能在融资成本及管理上要利润。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -239,7 +210,7 @@
   </div>
  </center>
  <p>
-  她还指出，中共扭曲的制度不改革，谁上台都是“屁股决定脑袋”，如果不同流合污，就只能走人，但长此下去，一条路走到黑，没有谁是真正安全的，包括习近平。
+  而融资成本的高低，直接决定企业经营绩效。中国房地产销售三十强企业的有息负债动辄千亿，融资成本差一个百分点，一年就能差十个亿。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -254,7 +225,7 @@
   </div>
  </center>
  <p>
-  她说：“习近平周围现在完全就是一批马屁精，但这些马屁精噤若寒蝉，不知道哪一天得罪了我们习老大，就玩完了。我说，现在最危险的，就是习近平。他越整，整到最后，就跟毛泽东一样，晚上自己睡不着觉，每天晚上、夜夜都要问几遍，院子的门关好了没有。”
+  《财经》杂志报导称，政策、融资环境变化背后，房地产市场的供需关系也悄然改变。随着居民收入增长放缓，城镇化进程过半，房地产正在从卖方市场向买方市场转化。有房不愁卖、卖房就挣大钱的时代一去不返。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -268,26 +239,6 @@
    </center>
   </div>
  </center>
- <p>
-  董宏过去做王岐山的反腐大刀，如今自己也成为砧板上的鱼肉。五中全会前，下一个会是王岐山吗？没有政治制度改革的
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  ，还在上演三千年封建的血腥轮回。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -306,7 +257,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -338,13 +289,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948045.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948045.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948045.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/03/948045.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954731.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954731.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954731.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/954731.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948045.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/954731.md' width='0px' height='0px'/>
