--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 北京十四五推经济增长靠消费 居民收入恐难支撑(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="十四五 经济 消费 收入" src="https://img3.secretchina.com/pic/2020/6-8/p2706741a899443103-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   客观数据显示，居民收入无法支撑市场，中国的消费能力正在明显下降。（图片来源：Getty Images）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,75 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月9日讯】北京官媒发文强调将居民
   <strong>
-   消费
-  </strong>
-  当做推动中国
-  <strong>
-   经济
-  </strong>
-  增长的主引擎。分析人士披露，北京制定的“
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/十四五" target="_blank">
-    十四五
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  ”规划，基本确定未来发展方向，即从过度依赖投资和出口，转向消费，作为经济增长的主要动力，但客观数据显示，居民收入无法支撑市场，中国的消费能力正在明显下降。
+  是先人
+  <strong>
+   智慧
+  </strong>
+  的
+  <strong>
+   结晶
+  </strong>
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  北京官媒《人民日报》10月8日发表题为《消费成为中国经济增长主引擎》的文章，肯定过往“十三五”经济增长方式。文章说：“中国经济发展正在从以往过于依赖投资和出口拉动，向更多依靠国内需求特别是
-  <span href="https://zh.wikipedia.org/wiki/消费" target="_blank">
-   消费
-  </span>
-  需求拉动转变。” “中国不断拓展的内需和消费市场，将释放巨大需求和消费动力。”
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  据自由亚洲电台报导，成都维权人士黄晓敏认为，该文章是宣传北京官方的新政策：“《人民日报》今天发表的这篇让消费成为中国
-  <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
-   经济
-  </span>
-  增长的主引擎，从头到尾，为宣传而说，为打造一个虚幻的盛世而说，显得空洞，其中缺乏数据和依据。它抓住几个服务亮点，个人服务消费方式，就说这是整个中国经济以点放大的宣传。”
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  看惯了北京官样文章的黄晓敏表示，自我赞扬、推销官方政策是北京当局的一贯作风，“而这个一贯的做法在这篇文章里面，还显得底气不足，数据不实和宣传的煽动性”。
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  <strong>
-   “
-  </strong>
-  <strong>
-   十四五
-  </strong>
-  <strong>
-   ”
-  </strong>
-  <strong>
-   规划定调
-   <span href="https://www.secretchina.com/news/gb/tag/消费" target="_blank">
-    消费
-   </span>
-   带动经济增长
-  </strong>
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  《人民日报》写道，回望“十三五”，消费已成为中国
-  <span href="https://zh.wikipedia.org/wiki/经济" target="_blank">
-   经济
-  </span>
-  增长主引擎。超大规模市场释放的巨大消费潜力，为中国经济高质量发展提供了有力支撑。今年上半年，面对疫情冲击，消费市场持续稳步回升，到6月，全国社会消费品零售总额同比降幅已连续4个月收窄，表现出强大的韧性。
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -104,11 +96,9 @@
   </div>
  </center>
  <p>
-  自由亚洲电台报导称，10月26日召开的中共五中全会制定的“
-  <span href="https://zh.wikipedia.org/wiki/中华人民共和国国民经济和社会发展第十四个五年规划纲要" target="_blank">
-   十四五
-  </span>
-  规划”，其重点是确定习近平提出的“以国内循环为主、国际国内互促的双循环发展的新格局”发展模式，依靠中国国内消费需求，推动经济增长。
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,13 +113,9 @@
   </div>
  </center>
  <p>
-  <strong>
-   数据显示中国居民
-   <span href="https://www.secretchina.com/news/gb/tag/收入" target="_blank">
-    收入
-   </span>
-   无法支撑消费市场
-  </strong>
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -144,10 +130,9 @@
   </div>
  </center>
  <p>
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  总理李克强在今年两会记者会上透露，全国有6亿人平均每人每月收入只有1000元人民币，这个消息打破了很多人对中国消费市场的幻想。即便是较高收入的中产阶层，他们超过一半工资都用来偿还房贷。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,7 +147,9 @@
   </div>
  </center>
  <p>
-  而更令人担忧的是，从今年上半年，中国大量外资企业撤离，再加上数据显示“十一”黄金周期间，居民消费同比下降。因此，北京当局的计划能否一如以往顺利实施，当前难下定论。
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,15 +164,9 @@
   </div>
  </center>
  <p>
-  <strong>
-   苹果已有
-  </strong>
-  <strong>
-   8
-  </strong>
-  <strong>
-   家代工厂转移印度
-  </strong>
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -200,7 +181,14 @@
   </div>
  </center>
  <p>
-  印度科技部长普拉萨9月表示，苹果已有8家代工厂从中国转移到了印度。金融学者司令对自由亚洲电台说，苹果、三星这些代工企业陆陆续续撤离中国，这些代工巨头非常看重劳动力的成本。这些企业往往受到北京当局不应有的审查和限制，虽然北京口口声声的说制定外商优惠政策，事实上他们发现在中国大陆投资的时候，遇到很多政策性壁垒，这是不可避免的。
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -219,7 +207,9 @@
   </ins>
  </center>
  <p>
-  苹果的代加工厂长期由富士康担任。富士康每年为中国提供数以十万个就业岗位。司令说：“农民工也好，中国大陆内地到沿海地区的代工厂打工，富士康这些企业在中国大陆提供工作岗位，贡献度非常大，撤离对中国大陆就业市场的打击不可小觑，他会加剧中国就业形势的紧张。”
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -234,9 +224,9 @@
   </div>
  </center>
  <p>
-  <strong>
-   外资为长远企业利益撤出中国
-  </strong>
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -251,7 +241,9 @@
   </div>
  </center>
  <p>
-  根据美国银行（Bank of America）8月中旬公布的研究数据，外国公司想在疫情期间将制造业务转移出中国大陆，可能需要在5年内付出1万亿美元。不过美银也指出，从长远来看，这一做法可能对企业有利。
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -266,7 +258,9 @@
   </div>
  </center>
  <p>
-  自由亚洲电台报导称，司令认为，北京当局提出的内循环其实也包括就业内循环，也就是在民营企业就业，转向用中国国内的内贸投资产生的就业机会，这是北京政府目前试图解决的尝试性探索。
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -281,7 +275,9 @@
   </div>
  </center>
  <p>
-  司令表示，一旦外资全部撤离，意味着中国永远丧失世界工厂的地位。
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -313,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -345,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948701.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948701.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948701.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/09/948701.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948701.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
