同步于: 12月4日21时2分

--- a/pages/p9/954733.md
+++ b/pages/p9/954733.md
@@ -1,4 +1,4 @@
-### 韩国马戏团露天演出 为防疫观众车上观赏(图)
+### 印度少年：12月恐怕会出现更恐怖的灾难(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="2020年9月19日，首尔的一个马戏团在露天进行了马戏表演。" src="https://img3.secretchina.com/pic/2020/9-21/p2780431a595194995-ss.jpg" style="height:400px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="阿南德" src="https://img3.secretchina.com/pic/2020/12-4/p2831881a457011725-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   2020年9月19日，首尔的一个马戏团在露天进行了马戏表演。（图片来源：AFP via Getty Images）
+   阿南德（图片来源：视频截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,52 +21,51 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月21日讯】（法广RFI）上周末在
+  【看中国2020年12月4日讯】一名14岁印
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/首尔" target="_blank">
-    首尔
-   </span>
+   度少年
   </strong>
-  一个
+  阿南德（Abhigya Anand）曾在去年神准命中
+  <span href="https://www.secretchina.com/news/gb/tag/新冠肺炎" target="_blank">
+   新冠肺炎
+  </span>
+  的爆发，而今年5月他又再度发影片预言，在疫情缓解后，12月恐怕会出现更恐怖的
   <strong>
-   露天
+   灾难
   </strong>
-  场地的舞台上，小丑表演变戏法、特技演员在空中跳跃，观众则安然坐在汽车里看
-  <strong>
-   表演
-  </strong>
-  ，隔离2019冠状病毒疾病（COVID-19）的危险。
+  ，让全世界再度陷入苦海中。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这项一年一度的马戏团
-  <span href="https://www.secretchina.com/news/gb/tag/表演" target="_blank">
-   表演
+  阿南德去年8月曾在影片中使用占星术预言，有一场威胁到世界各国的
+  <span href="https://zh.wikipedia.org/wiki/%E7%81%BE%E5%AE%B3" target="_blank">
+   灾难
   </span>
-  通常在5月举行，由于疫情影响，今年的表演两度延后，后来主办单位改成观众乘车入场观看的方式。
+  将从2019年11月开始，到今年3、4月进入高峰期，直至5月才会逐渐趋缓。
  </p>
  <p>
-  <span href="https://zh.wikipedia.org/wiki/%E9%A6%96%E7%88%BE" target="_blank">
-   首尔
+  直到新冠爆发后，许多网友都相当震惊，因为预言的月份皆十分吻合今年疫情的时机点。
+ </p>
+ <p>
+  而今年5月阿南德又再度发布影片，并预言今年的国际局势相当混乱紧张，世界各地都有爆发战争的可能，尤其中印地区的影响程度不容小觑。影片上传后，不只中印边境发生衝突，南北韩的关係也变得紧张，美国伊朗之间的衝突更是不断恶化。
+ </p>
+ <p>
+  阿南德还在影片中预言，疫情要等到7月全球才会逐渐好转，不过在12月20日到明年3月31日会出现更严重的
+  <span href="https://www.secretchina.com/news/gb/tag/灾难" target="_blank">
+   灾难
   </span>
-  街头艺术创作中心经理赵炳熙（Cho Beong-hee，译音）说：“即使在疫情流行期间，表演艺术也非常重要。”
- </p>
- <p>
-  “因此我们提出不同的想法，想让活动顺利进行，最后选择免下车选项，因为这被视为最安全想法。”
- </p>
- <p>
-  每场活动允许30辆车停在舞台前面观赏，活动也在网络上免费直播。
+  ，有可能是新冠再次流行，也有可能是新的超级细菌，让全球再度陷入苦海中，若人类想在这场灾难中全身而退就必须停止伤害动物及大自然，阿南德的预言一出让不少人担心会再度成真。
  </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
@@ -86,7 +85,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -118,13 +117,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946753.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946753.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946753.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/21/946753.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954733.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954733.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954733.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/954733.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/946753.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/954733.md' width='0px' height='0px'/>
