--- a/pages/nsc412/n12595730.md
+++ b/pages/nsc412/n12595730.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12·4】内华达证人：票数夜间遭篡改" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/b1a68768be188314a237f3b42ad4031d-600x400.jpg"/>
+<div><img alt="【大选更新12·4】乔州州长吁审计签名" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/11-11.jpg"/>
 <div class="caption">
- 内华达州华人监票员曝光计票作假、核心电脑消失的内幕。图为内华达州克拉克县（Clark County）选举计票中心。（姜琳达／大纪元）
+ 图为乔治亚州州长布莱恩‧坎普（Brian Kemp）。(Elijah Nouvelage/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
