--- a/pages/p5/954738.md
+++ b/pages/p5/954738.md
@@ -1,4 +1,4 @@
-### 川普与菅义伟通话 讨论自由印太地区愿景(图)
+### 大众汽车：芯片短缺 中国汽车生产恐中断
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,61 +6,65 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="菅义伟" src="https://img3.secretchina.com/pic/2020/9-1/p2767102a87732984-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   菅义伟（图片来源：JIJI PRESS/AFP/Getty Images）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p>
+  【看中国2020年12月4日讯】据媒体报导，中国最大的外国汽车制造商
+  <strong>
+   大众汽车
+  </strong>
+  （Volkswagen AG）12月4日表示，由于
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
-  </br>
+  </strong>
+  疫情大流行中断了全球部分
+  <strong>
+   芯片
+  </strong>
+  供应后，恐造成中国整体汽车生产中断。
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
+   </span>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月21日讯】白宫透过声明指出 ，美国总统
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
-   </span>
-  </strong>
-  今天与日本新首相
-  <strong>
-   菅义伟
-  </strong>
-  通电话，川普 祝贺菅义伟就任首相，两人还讨论追求“自由开放的印 度洋-太平洋地区”共同愿景的重要性。
+  据《自由时报》引述《路透社》的报导称，这场疫情大流行影响了全球
+  <span href="https://www.secretchina.com/news/gb/tag/汽车" target="_blank">
+   汽车
+  </span>
+  及零部件生产。作为全球最大的汽车市场的中国，汽车制造又因为严重依赖进口芯片，部分汽车电子组件的芯片供应的确受到了影响。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  白宫声明写道：“两位领导人讨论了追求我们对自 由开放印太地区的共同愿景、持续巩固美日同盟及共同 努力加强全球经济等议题的重要性。”
+  <span href="https://www.secretchina.com/news/gb/tag/大众" target="_blank">
+   大众
+  </span>
+  汽车告诉《路透社》，由于芯片供应出现问题，恐造成中国汽车生产的中断，加上市场的需求上升，芯片短缺的情况变得越来越严重。
  </p>
  <p>
-  共同社报导，美日领导人通话结束后，
-  <span href="https://ja.wikipedia.org/wiki/%E8%8F%85%E7%BE%A9%E5%81%89" target="_blank">
-   菅义伟
+  大众汽车还特别提到，中国内地汽车生产短缺
+  <span href="https://www.secretchina.com/news/gb/tag/芯片" target="_blank">
+   芯片
   </span>
-  向记 者表示，他告诉川普，日本与华府的同盟是“印太地区 和平与稳定的基础”。
+  指的是中国的整体汽车生产，而不仅仅是大众汽车。
  </p>
  <p>
-  在长达25分钟的通话中，川普和
-  <span href="https://www.secretchina.com/news/gb/tag/菅义" target="_blank">
-   菅义
-  </span>
-  伟还谈到了北 韩局势。
+  大众汽车表示，为了避免影响其生产，大众汽车目前正在密切监视局势，并已经开始与其总部和供应商进行协调，以采取适当的对策。
  </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
@@ -80,7 +84,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -100,13 +104,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946754.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946754.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946754.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/21/946754.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954738.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954738.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954738.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/954738.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/946754.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/954738.md' width='0px' height='0px'/>
