--- a/pages/nf4514/n12595730.md
+++ b/pages/nf4514/n12595730.md
@@ -1,4 +1,4 @@
-### 【大选更新12·4】乔州州长吁审计签名
+### 【大选更新12·4】内华达证人：票数夜间遭篡改
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -45,26 +45,6 @@
 <h4>
  以下是美国大选情况的实时更新：
 </h4>
-<h3>
- 乔治亚州州长吁审计签名
-</h3>
-<figure class="wp-caption aligncenter" id="attachment_12263957" style="width: 600px">
- <ok href="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1221513169.jpg">
-  <img alt="" class="size-large wp-image-12263957" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1221513169-600x414.jpg"/>
- </ok>
- <br/><figcaption class="wp-caption-text">
-  图为乔治亚州州长布莱恩·坎普于2020年4月27日，在州议会举行的新闻发布会上向媒体发表讲话。（Kevin C. Cox/Getty Images）
- </figcaption><br/>
-</figure><br/>
-<p>
- 在乔治亚州的听证会上，各种舞弊证据让人震惊，州长布莱恩‧坎普（Brian Kemp）呼吁州务卿拉芬斯伯格（Brad Raffensperger）下令对选票的签名进行审计。
-</p>
-<p>
- 周四（12月3日）坎普在福克斯新闻中表示，州法律赋予州务卿权力，在必要时审计或调整选举程序。“我之前就呼吁进行签名审计”，他说，“很明显根据法律和（州）宪法，州务卿必须下令这样做，但他还没做。我认为应该做这件事。”
-</p>
-<p>
- “我再次呼吁（审计签名），在接下来的24小时里，希望我们能从立法机构今天举行的听证会上看到更多的东西，我们可以看看接下来怎么发展。”坎普说。
-</p>
 <h3>
  内华达州证人：票数夜间遭篡改
 </h3>
