--- a/pages/nf4514/n12595730.md
+++ b/pages/nf4514/n12595730.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新12·4】乔州州长吁审计签名" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/11-11.jpg"/>
+<div><img alt="【大选更新12·4】川普律师：做对的事永不嫌晚" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/11-11.jpg"/>
 <div class="caption">
  图为乔治亚州州长布莱恩‧坎普（Brian Kemp）。(Elijah Nouvelage/Getty Images)
 </div></div><hr/>
