--- a/pages/nsc412/n12595730.md
+++ b/pages/nsc412/n12595730.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12·4】乔州州长吁审计签名" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/11-11.jpg"/>
+<div><img alt="【大选更新12·4】川普：假新闻操控媒体比大选更严重" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229807292-1-600x400.jpg"/>
 <div class="caption">
- 图为乔治亚州州长布莱恩‧坎普（Brian Kemp）。(Elijah Nouvelage/Getty Images)
+ 川普总统周五下午发文说，假新闻操控媒体比大选更严重。图为美国总统川普11月27日谴责假新闻媒体打压真相。(Photo by ANDREW CABALLERO-REYNOLDS/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
