--- a/pages/soh6/449863.md
+++ b/pages/soh6/449863.md
@@ -52,8 +52,19 @@
   密歇根州法官下令检查该州选举设施
  </h2>
  <p>
-  周五，密歇根州法官下令对安特里姆县选举机器进行检查，并禁止任何部门销毁与2020年选举有关的证据。
+  周五，密歇根州法官下令对安特里姆县选举系统与设施进行检查，并禁止任何部门销毁与2020年选举有关的证据。
  </p>
+ <p>
+  对此，美国大律师林·伍德评论说，“通往真理的每一步都从一小步开始。”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive" style="padding-bottom: 100%;">
+    </div>
+   </div>
+  </div>
+ </div>
  <h2>
   亚利桑那参众两院议长要求检查选举设施
   <ok href="/term/1041">
